# DPGO

./: LICENSE  README.md
C++/: CMakeLists.txt
C++/DChordal/: CMakeLists.txt
C++/DChordal/include/DChordal/: DChordal.h  DChordalProblem.h  DChordalReduced.h  DChordalReducedProblem.h  DChordal_types.h  DChordal_utils.h  RelativePoseMeasurement.h  SOdProduct.h
C++/DChordal/src/: DChordal.cpp  DChordalProblem.cpp  DChordalReduced.cpp  DChordalReducedProblem.cpp  DChordal_utils.cpp
C++/DPGO/: CMakeLists.txt
C++/DPGO/include/DPGO/: DPGOHash.h  DPGOProblem.h  DPGOStar.h  DPGO_types.h  DPGO_utils.h  PCM.h  RelativePoseMeasurement.h  SOdProduct.h
C++/DPGO/include/DPGO/internal/: project_to_SO2.h  project_to_SO3.h  project_to_SOd.h  svd.h  svd3x3.h  traits.h
C++/DPGO/src/: DPGOHash.cpp  DPGOProblem.cpp  DPGOStar.cpp  DPGO_utils.cpp  PCM.cpp
C++/DPGO/src/internal/: project_to_SOd.cpp  traits.cpp
C++/Optimization/include/Optimization/Base/: Concepts.h
C++/Optimization/include/Optimization/Riemannian/: TNT.h
C++/PCM/: CMakeLists.txt
C++/PCM/fmc/: CMakeLists.txt  findClique.h  findCliqueHeu.cpp  graphIO.h  main_fmc.cpp
C++/PCM/fmc/testgraphs/: hamming6-2.clq.mtx  test-graph10-5.mtx  test-graph2.mtx
C++/PCM/include/PCM/: PCM.hpp
C++/PCM/src/: PCM.cpp
C++/Preconditioners/: CMakeLists.txt  README.md
C++/Preconditioners/Preconditioners/: Types.h
C++/Preconditioners/Preconditioners/ILDL/include/ILDL/: ILDL.h  ILDL_utils.h
C++/Preconditioners/Preconditioners/ILDL/src/: ILDL.cpp  ILDL_utils.cpp
C++/Preconditioners/Preconditioners/LSChol/include/LSChol/: LSChol.h
C++/Preconditioners/Preconditioners/LSChol/src/: LSChol.cpp
C++/Preconditioners/SymILDL/: .gitignore  .gitignore_global  License.md  README.md
C++/Preconditioners/SymILDL/SymILDL/: block_diag_matrix.h  lilc_matrix.h  lilc_matrix_declarations.h  lilc_matrix_find_level_set.h  lilc_matrix_find_root.h  lilc_matrix_ildl_helpers.h  lilc_matrix_load.h  lilc_matrix_pivot.h  lilc_matrix_sym_amd.h  lilc_matrix_sym_equil.h  lilc_matrix_sym_rcm.h  solver.h  solver_minres.h  solver_sqmr.h  swap_struct.h
C++/Preconditioners/test/: CMakeLists.txt  ILDLTest.cpp  LSCholTest.cpp
C++/SESync/: CMakeLists.txt
C++/SESync/include/SESync/: SESyncProblem.h  SESync_types.h  SESync_utils.h
C++/SESync/src/: SESync_utils.cpp
C++/examples/: CMakeLists.txt  dist_pgo.cpp
dataset/: FR079.g2o  FRH.g2o  sphere_small.g2o  tinyGrid3D.g2o
